--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -216,6 +216,10 @@ resources:
                   openssl dhparam -out ~/.jitsi-meet-cfg/web/nginx/dhparams.pem 2048 &
                   git clone https://github.com/jitsi/docker-jitsi-meet
                   cd docker-jitsi-meet
+                  # We can safely ignore hanging pipstrap if we are not using letenc
+                  if test -z "letsenc_mail"; then
+                    sed -i 's/certbot\-auto \-\-noninteractive/timeout 42 certbot-auto --noninteractive/' web/Dockerfile
+                  fi
                   make
                   cp -p docker-compose.yml etherpad.yml jigasi.yml ~
                   cp -p env.example ~/.env
