--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -221,9 +221,9 @@ resources:
                   openssl dhparam -out ~/.jitsi-meet-cfg/web/nginx/dhparams.pem 2048 &
                   git clone https://github.com/jitsi/docker-jitsi-meet
                   cd docker-jitsi-meet
-                  # We can safely ignore hanging pipstrap if we are not using letenc
+                  # We can safely ignore hanging pipstrap if we are not using letsenc
                   if test -z "letsenc_mail"; then
-                    sed -i 's/certbot\-auto \-\-noninteractive/timeout 42 certbot-auto --noninteractive/' web/Dockerfile
+                    sed -i 's/\(certbot\-auto \-\-noninteractive.*$\)/timeout 21 \1 || true/' web/Dockerfile
                   fi
                   # Inject icon/watermark
                   if test -r /root/favicon.ico -a $(stat -c %s /root/favicon.ico) -gt 0; then
