--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -41,6 +41,11 @@ parameters:
     type: string
     default: https://jitsi.org
 
+  jitsi_version:
+    type: string
+    default: stable-5142
+    #default: master
+
   public_domain:
     type: string
 
@@ -185,6 +190,7 @@ resources:
                   jitsi_user: {get_param: jitsi_user}
                   jitsi_password: {get_param: jitsi_password}
                   jitsi_watermark_link: {get_param: jitsi_watermark_link}
+                  jitsi_version: {get_param: jitsi_version}
                   public_domain: {get_param: public_domain}
                   public_port: {get_param: public_port}
                   public_url: {get_param: public_url}
@@ -221,8 +227,9 @@ resources:
                   openssl dhparam -out ~/.jitsi-meet-cfg/web/nginx/dhparams.pem 2048 &
                   git clone https://github.com/jitsi/docker-jitsi-meet
                   cd docker-jitsi-meet
+                  git checkout jitsi_version
                   # XMPP_WEBSOCKET just breaks it, so revert for now
-                  git show 465816b4ebf2babf1b9e6daf007301c1fd17552e d747bfbe6b72dd86789f61a97372b94c2c19677f | patch -p1 -R
+                  #git show 465816b4ebf2babf1b9e6daf007301c1fd17552e d747bfbe6b72dd86789f61a97372b94c2c19677f | patch -p1 -R
                   # We can safely ignore hanging pipstrap if we are not using letsenc
                   if test -z "letsenc_mail"; then
                     sed -i 's/\(certbot\-auto \-\-noninteractive.*$\)/timeout 21 \1 || true/' web/Dockerfile
