git revert command runs into merge conflict, fixup.
Signed-off-by: Kurt Garloff <kurt@garloff.de>

--- a/jitsi-stack.yml
+++ b/jitsi-stack.yml
@@ -189,6 +189,9 @@ resources:
           - content: {get_file: enable-constraints.sed}
             path: /root/enable-constraints.sed
             permissions: 0644
+          - content: {get_file: revert-465816b.diff}
+            path: /root/revert-465816b.diff
+            permissions: 0644
           - content:
               str_replace:
                 params:
@@ -212,7 +215,8 @@ resources:
                   cd docker-jitsi-meet
                   git checkout jitsi_version
                   # XMPP_WEBSOCKET still breaks it, so revert for now
-                  git revert 465816b4ebf2babf1b9e6daf007301c1fd17552e
+                  #git revert 465816b4ebf2babf1b9e6daf007301c1fd17552e
+                  patch -p1 < ../revert-465816b.diff
                   # We can safely ignore hanging pipstrap if we are not using letsenc
                   if test -z "letsenc_mail"; then
                     sed -i 's/\(certbot\-auto \-\-noninteractive.*$\)/timeout 21 \1 || true/' web/Dockerfile
